<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_gravity="center"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/imageView_layout_margintop"
            app:srcCompat="@drawable/logo_main"
            tools:ignore="VectorDrawableCompat" />

        <EditText
            android:id="@+id/etUser_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_marginLeft"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:layout_marginRight="@dimen/layout_marginRight"
            android:layout_marginBottom="@dimen/layout_marginBottom"
            android:ems="10"
            android:hint="@string/user_id"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/text_size"
            />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_marginLeft"
            android:layout_marginRight="@dimen/layout_marginRight"
            android:layout_marginBottom="@dimen/layout_marginBottom"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size"
            />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_marginLeft"
            android:layout_marginRight="@dimen/layout_marginRight"
            android:layout_marginBottom="@dimen/layout_marginBottom"
            android:backgroundTint="@color/ez_cart_pink"
            android:text="@string/login" />

        <Button
            android:id="@+id/btnSign_UP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/btnSignUp_marginLeft"
            android:layout_marginRight="@dimen/btnSignUp_marginRight"
            android:layout_marginBottom="@dimen/btnSignUp_marginBottom"

            android:backgroundTint="@color/white"
            android:text="@string/sign_up"
            android:textColor="@color/ez_cart_pink" />

<!--<Button-->
<!--     android:layout_width="match_parent"-->
<!--       android:layout_height="match_parent"-->
<!--      android:id="@+id/btnCrash"-->
<!--       android:text="crash"/>-->

    </LinearLayout>
</ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>


