<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">



    <EditText
        android:id="@+id/eTFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/eTFeedback_padding"
        android:textSize="@dimen/Feedback_text_size"
        android:background="@drawable/border"
        android:hint="@string/your_feedback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/rate_now_layout_marginStart"
        android:text="@string/rate_now"
        android:textSize="@dimen/Feedback_text_size"

        app:layout_constraintBottom_toTopOf="@+id/eTFeedback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginLeft="@dimen/rate_now_layout_marginLeft" />

    <RatingBar
        android:id="@+id/rating_Bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/rate_now_layout_marginStart"
        android:layout_marginLeft="@dimen/rate_now_layout_marginLeft"
        android:background="@color/white"
        android:isScrollContainer="false"
        android:numStars="5"
        android:progressBackgroundTint="@color/grey"
        android:progressTint="@color/ez_cart_pink"
        android:rating="0"
        android:stepSize="0.5"
        app:layout_constraintBottom_toTopOf="@+id/eTFeedback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_feedback"
        android:backgroundTint="@color/ez_cart_pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>